# cuda-helmholtz

./: CMakeLists.txt
include/: CudaAllocatorInterfaces.cuh  HelmholtzSet.cuh  MeshUtils.h  Mesher.cuh  Utils.cuh  cudaAllocatorInterface.cuh  cuda_float3_operators.cuh  cuda_types_operators.cuh  env_kernels.cuh  magnetics_kernels.cuh  mesh_utils.h  utilities.h  utils.cuh  utils.h
include/cuda_types_utils/: cuda_float1_operators.cuh  cuda_float2_operators.cuh  cuda_float3_operators.cuh
include/kernels/: EvalSystemForMesh.cuh  EvaluateForMeshKernel.cuh  HelmholtzEnvKernels.cuh  MeshEnvKernels.cuh
include/macros/: CudaMacros.cuh
src/: HelmholtzSet.cu  magnetics_kernels.cu  main.cu  utils.cu
src/cuda/: cuda_float2_operators.cu  cuda_float3_operators.cu
src/examples/: gpu_cpu_compute.cu  mesh_eval_test.cu  meshing.cu
src/kernels/: env_kernels.cu
src/simulation/: HelmholtzSet.cu  Mesher.cu
src/tools/: Utils.cu  utils.cu
